--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,6 @@
 browser  = chrome
 email    = ivanov@gmail.com
-password = 12345
+//password = 12345
 urlforGmail = https://Gmail.com
 email2 = sidorov111@gmail.com
 password2 = sid123
